# sarl_star_ros2

./: README.md
create3_sim/irobot_create_common/irobot_create_common_bringup/launch/: create3_nodes.launch.py
sarl_star/laser_filters/examples/: angular_filter_example.yaml  laserscan_filter.yaml
sarl_star/people/leg_detect/: CMakeLists.txt  package.xml
sarl_star/people/leg_detect/include/leg_detect/: calc_leg_features.h  laser_processor.h
sarl_star/people/leg_detect/src/: calc_leg_features.cpp  laser_processor.cpp  leg_detector.cpp
sarl_star/people/people_msgs/: CMakeLists.txt  package.xml
sarl_star/people/people_tracking_filter/: CMakeLists.txt  package.xml
sarl_star/people/people_tracking_filter/include/people_tracking_filter/: detector_particle.h  gaussian_pos_vel.h  gaussian_vector.h  mcpdf_pos_vel.h  mcpdf_vector.h  measmodel_pos.h  measmodel_vector.h  rgb.h  state_pos_vel.h  sysmodel_pos_vel.h  sysmodel_vector.h  tracker.h  tracker_kalman.h  tracker_particle.h  uniform_vector.h
sarl_star/people/people_tracking_filter/src/: detector_particle.cpp  gaussian_pos_vel.cpp  gaussian_vector.cpp  mcpdf_pos_vel.cpp  mcpdf_vector.cpp  measmodel_pos.cpp  measmodel_vector.cpp  sysmodel_pos_vel.cpp  sysmodel_vector.cpp  tracker_kalman.cpp  tracker_particle.cpp  uniform_vector.cpp
sarl_star/people/people_velocity_tracking/: CMakeLists.txt  package.xml
sarl_star/people/people_velocity_tracking/include/people_velocity_tracking/: easy_marker.h  kalman.h  person_estimate.h  velocity_tracker.h
sarl_star/people/people_velocity_tracking/src/: easy_marker.cpp  kalman.cpp  person_estimate.cpp  tracker.cpp  velocity_tracker.cpp
sarl_star/sarl_star_ros2/: package.xml  setup.cfg  setup.py
sarl_star/sarl_star_ros2/CrowdNav/: .gitignore
sarl_star/sarl_star_ros2/CrowdNav/crowd_nav/: test.py  train.py
sarl_star/sarl_star_ros2/CrowdNav/crowd_nav/data/output/: il_model.pth  rl_model.pth
sarl_star/sarl_star_ros2/CrowdNav/crowd_nav/data/output1/: il_model.pth  rl_model.pth
sarl_star/sarl_star_ros2/CrowdNav/crowd_nav/data/output_cadrl/: il_model.pth  rl_model.pth
sarl_star/sarl_star_ros2/CrowdNav/crowd_nav/data/output_lstm/: il_model.pth  rl_model.pth
sarl_star/sarl_star_ros2/CrowdNav/crowd_sim/envs/: crowd_sim.py
sarl_star/sarl_star_ros2/CrowdNav/crowd_sim/envs/utils/: agent.py
sarl_star/sarl_star_ros2/config/: rviz.rviz
sarl_star/sarl_star_ros2/launch/: sarl_star_navigation.launch.py
sarl_star/sarl_star_ros2/sarl_star_ros2/: sarl_star_node.py
turtlebot4_simulator/turtlebot4_ignition_bringup/worlds/: warehouse.sdf
